Se agrego la opcion de ver el listado de usuarios registrados

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -279,7 +279,7 @@
             />
 
         <Button
-            android:id="@+id/btnVer"
+            android:id="@+id/btnListar"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
