--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,11 @@
     <color name="darkBlue">#2270C2</color>
     <color name="Blue">#2270C2</color>
 
+
+    <color name="background_color">#F5F5F5</color>
+    <color name="header_text_color">#FFFFFF</color>
+    <color name="header_background">#3F51B5</color>
+    <color name="list_divider_color">#BDBDBD</color>
+    <color name="list_background">#FFFFFF</color>
+
 </resources>
