--- a/app/src/main/res/layout/activity_listar.xml
+++ b/app/src/main/res/layout/activity_listar.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@drawable/fondo"
+    android:background="@color/background_color"
     tools:context=".controller.Listar">
 
     <TextView
@@ -17,9 +17,9 @@
         android:text="Lista de Usuarios"
         android:textSize="20sp"
         android:gravity="center"
-        android:textColor="@color/white"
+        android:textColor="@color/header_text_color"
         android:padding="10dp"
-        android:background="@color/darkBlue"
+        android:background="@color/header_background"
         android:elevation="4dp" />
 
     <ListView
@@ -27,11 +27,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:divider="@color/darkBlue"
+        android:divider="@color/list_divider_color"
         android:dividerHeight="1dp"
         android:background="@color/list_background"
-        android:padding="8dp"
-        android:layout_gravity="center"
-        />
+        android:padding="8dp" />
 
 </LinearLayout>
