--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -266,7 +266,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp">
+        android:layout_marginTop="10dp">
         <Button
             android:id="@+id/btnGuardar"
             android:layout_width="150dp"
@@ -286,6 +286,35 @@
             android:backgroundTint="#003978"
             android:padding="20dp"
             android:text="Listar"
+            android:textSize="20dp"
+            android:textColor="@color/white"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp">
+        <Button
+            android:id="@+id/btnEditar"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Editar"
+            android:backgroundTint="#1AA81F"
+            android:textSize="20dp"
+            android:padding="20dp"
+            android:layout_marginHorizontal="10dp"
+            />
+
+        <Button
+            android:id="@+id/btnEliminar"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:backgroundTint="#780000"
+            android:padding="20dp"
+            android:text="Eliminar"
             android:textSize="20dp"
             android:textColor="@color/white"
             />
